# spx-research

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: events.csv  qqq_intraday_5min.csv  sample_intraday_qqq.csv  spx_daily.csv  tradingview_option_quotes_template.csv  vix_daily.csv
docs/: react_python_architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  app.css
frontend/src/api/: client.ts
intraday_condor_research/: __init__.py  chain_snapshot.py  cli.py  features.py  fill_sampling.py  io.py  plots.py  quote_calibration.py  regimes.py  session.py  stats.py  strategy_costs.py  twelve_data.py  vertical_fills.py
python_api/: __init__.py  app.py  schemas.py  service.py
scripts/: backtest_intraday_excursion_bridge.py  calibrate_tradingview_quotes.py  download_market_data.py  download_twelve_data_intraday.py  estimate_strategy_costs.py  estimate_strategy_costs_from_trades.py  estimate_vertical_fills.py  extract_tradingview_0dte_chain_snapshot.py  model_fill_sampling.py  policy_sweep.py  rolling_regime_backtest.py  screen_vertical_opportunities.py  screen_vertical_opportunities_after_touch.py
spx_0dte_planner/: __init__.py  backtest.py  cli.py  data.py  events.py  features.py  intraday_bridge.py  live.py  model.py  opportunity_screen.py  webapp.py
tests/: test_intraday_pipeline.py  test_pipeline.py  test_python_api.py  test_quote_calibration.py  test_webapp.py
