[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spx-0dte-planner"
version = "0.1.0"
description = "Daily-feature SPX close model and 0DTE vertical planning backtester"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
